--- a/namespace2/n2-app.yaml
+++ b/namespace2/n2-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: kustomize-example
+  name: ns2-app
 spec:
   projec: default
   source:
