--- a/bootstrap_templates/kafka_component.yaml
+++ b/bootstrap_templates/kafka_component.yaml
@@ -17,11 +17,11 @@ spec:
           component_type: kafka
   template:
     metadata:
-      name: "{{path[1]}}-{{values.component_type}}"
+      name: "{{index .path.segments 1}}-{{values.component_type}}"
     spec:
       destination:
         server: https://kubernetes.default.svc # ArgoCD's own cluster
-        namespace: "{{path[1]}}" # should be /namespaces[0]/namespace1[1]
+        namespace: "{{index .path.segments 1}}" # should be /namespaces[0]/namespace1[1]
       project: default
       sources:
         - repoURL: "{{kafka.values.repoURL}}"
@@ -33,7 +33,7 @@ spec:
           helm:
             # https://argo-cd.readthedocs.io/en/latest/user-guide/helm/#helm-value-precedence
             values: |
-              prefix: "{{path.basenameNormalized}}"
+              prefix: "{{.path.basenameNormalized}}"
               suffix: "{{values.component_type}}"
             valueFiles:
               - $external_values/{{path.basenameNormalized}}/requirements/{{values.component_type}}-values.yaml
