--- a/bootstrap_templates/s3_component.yaml
+++ b/bootstrap_templates/s3_component.yaml
@@ -17,7 +17,7 @@ spec:
           component_type: s3
   template:
     metadata:
-      name: "{{index .path.segments 1}}-{{values.component_type}}"
+      name: "{{index .path.segments 1}}-{{.values.component_type}}"
     spec:
       destination:
         server: https://kubernetes.default.svc # ArgoCD's own cluster
@@ -34,9 +34,9 @@ spec:
             # https://argo-cd.readthedocs.io/en/latest/user-guide/helm/#helm-value-precedence
             values: |
               prefix: "{{.path.basenameNormalized}}"
-              suffix: "{{values.component_type}}"
+              suffix: "{{.values.component_type}}"
             valueFiles:
-              - $external_values/{{.path.basenameNormalized}}/requirements/{{values.component_type}}-values.yaml
+              - $external_values/{{.path.basenameNormalized}}/requirements/{{.values.component_type}}-values.yaml
       syncPolicy:
         syncOptions:
           - PrunePropagationPolicy=undefined
