--- a/bootstrap_templates/application.yaml
+++ b/bootstrap_templates/application.yaml
@@ -24,12 +24,12 @@ spec:
         namespace: "{{index .path.segments 1}}" # should be /namespaces[0]/namespace1[1]
       project: default
       sources:
-        - repoURL: "{{application.values.repoURL}}"
-          targetRevision: "{{application.values.revision}}"
+        - repoURL: "{{.application.values.repoURL}}"
+          targetRevision: "{{.application.values.revision}}"
           ref: external_values # Allows us to reference repo w/ templating
-        - repoURL: "{{application.chart.repoURL}}"
-          path: "{{application.chart.path}}"
-          targetRevision: "{{application.chart.revision}}"
+        - repoURL: "{{.application.chart.repoURL}}"
+          path: "{{.application.chart.path}}"
+          targetRevision: "{{.application.chart.revision}}"
           helm:
             # https://argo-cd.readthedocs.io/en/latest/user-guide/helm/#helm-value-precedence
             values: |
