--- a/bootstrap_templates/kafka_component.yaml
+++ b/bootstrap_templates/kafka_component.yaml
@@ -24,12 +24,12 @@ spec:
         namespace: "{{index .path.segments 1}}" # should be /namespaces[0]/namespace1[1]
       project: default
       sources:
-        - repoURL: "{{kafka.values.repoURL}}"
-          targetRevision: "{{kafka.values.revision}}"
+        - repoURL: "{{.kafka.values.repoURL}}"
+          targetRevision: "{{.kafka.values.revision}}"
           ref: external_values # Allows us to reference repo w/ templating
-        - repoURL: "{{kafka.chart.repoURL}}"
-          path: "{{kafka.chart.path}}"
-          targetRevision: "{{kafka.chart.revision}}"
+        - repoURL: "{{.kafka.chart.repoURL}}"
+          path: "{{.kafka.chart.path}}"
+          targetRevision: "{{.kafka.chart.revision}}"
           helm:
             # https://argo-cd.readthedocs.io/en/latest/user-guide/helm/#helm-value-precedence
             values: |
