--- a/bootstrap_templates/application.yaml
+++ b/bootstrap_templates/application.yaml
@@ -17,7 +17,7 @@ spec:
           component_type: application
   template:
     metadata:
-      name: "{{.path.basenameNormalized}}-{{.values.component_type}}"
+      name: "{{index .path.segments 1}}-{{.path.basenameNormalized}}-{{.values.component_type}}"
     spec:
       destination:
         server: https://kubernetes.default.svc # ArgoCD's own cluster
